--- a/client/index-2.html
+++ b/client/index-2.html
@@ -100,7 +100,11 @@
         <div class="section-header">
           <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">About <span>Us</span></h2>
           <hr class="lines wow zoomIn" data-wow-delay="0.3s">
-          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Established in 2015 , Lycka Group is a partnering with leading companies in innovation  with a proven track record in delivery and execution of complex projects worldwide in energy saving and production; Critical Communication and Defense .
+          <p class="section-subtitle wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">
+
+            Lycka India helps companies across the globe become future ready. Established in 2015, we offer trade consultancy services to firms who innovate, and wish to establish a viable presence in emerging markets — with a focus on India and Africa. We help foster win-win partnerships connecting domestic firms with international solution providers in Europe and across the globe. No matter where you are, with Lycka by your side you can identify, develop and deploy revolutionary products and services across a number of fast-evolving, high-technology sectors such as, renewable energy, defence, telecommunications, and security.
+
+            Established in 2015 , Lycka Group is a partnering with leading companies in innovation  with a proven track record in delivery and execution of complex projects worldwide in energy saving and production; Critical Communication and Defense .
             <br>Affiliated with the industry’s leading suppliers in these fields, Lycka Group represents a wide range of well-known companies in the energy, communication and defense system
   <br>
 As ONE STOP SHOP: Lycka Group focuses on delivering customized turnkey solution that fit the need of his customer.
