--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#focus">Sector Focus</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="#flywheel">Who can use Levisys Flywheel Technology?</a>
           </li>
           <li class="nav-item">
@@ -71,9 +71,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#SuperiorIntelligence">Superior Intelligence, On the Move</a>
           </li>
-          <li class="nav-item">
+          <li <classNew></classNew>="nav-item">
             <a class="nav-link" href="#ProductCategories">Product Categories</a>
-          </li>
+          </li>-->
 
           <!--<li class="nav-item">
                 <a class="nav-link" href="#portfolios">Our Works</a>
@@ -112,15 +112,15 @@
       <div class="row justify-content-md-center">
         <div class="col-md-10">
           <div class="contents text-center">
-            <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">Invest in Innovation<br> Connect and Collaborate<br> Conquer New Frontiers<br> Build the Future
+            <h1 class="wow fadeInDown myown" data-wow-duration="1000ms" data-wow-delay="0.3s">Invest in Innovation<br> Connect and Collaborate<br> Conquer New Frontiers<br> Build the Future
 </h1>
-            <div><br/>
+            <!--<div><br/>
               <br/>
               <br/><br/>
               <br/>
               <br/><br/>
               <br/>
-              <br/></div>
+              <br/></div>-->
           </div>
         </div>
       </div>
