--- a/client/index.html
+++ b/client/index.html
@@ -98,7 +98,7 @@
   <!-- Header Section Start -->
 
   <header id="video-area" data-stellar-background-ratio="0.5">
-    <div id="block" data-vide-bg="video/levisys"></div>
+    <div id="block" data-vide-bg="video/levisys" data-vide-options="loop: true"></div>
     <div class="fixed-top">
       <div class="container">
         <div class="logo-menu">
