--- a/client/index.html
+++ b/client/index.html
@@ -487,6 +487,9 @@
                 '<p><b>LYCKA INDIA TRADING PRIVATE LIMITED</b>' +
                 '<br>#1103, 11th Floor,<br> Mittal Towers, MG Road <br> Bengaluru, Karnataka - 560046' + '<br>India ' +
                 '</p>' +
+                '<div class="view-link"> <a target="_blank" jstcache="6"' + 'href="https://maps.google.com/maps?ll=12.97455,77.615951&amp;z=18&amp;t=m&amp;' +
+                'hl=en-GB&amp;gl=US&amp;mapclient=apiv3&amp;cid=8635206022501567756"> ' +
+                '<span>View on Google Maps</span> </a> </div>' +
                 '</div>' +
                 '</div>';
 
