--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/menu_sideslide.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
+    
 
 </head>
 
@@ -394,11 +395,17 @@
                     <div class="container">
                         <div class="contact-block">
                             <div class="section-header">
-                                <h2 class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">Visit <span>Us</span></h2>
-                                <hr class="lines wow zoomIn" data-wow-delay="0.3s">
                             </div>
-                            <h5 class="nab">
-                                #1103, 11th Floor,<br> Mittal Towers, MG Road <br> Bengaluru, Karnataka - 560046 <br>India</h5>
+                            
+                               <h3 style="font-size: 20px;" class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">LYCKA INDIA TRADING PRIVATE LIMITED </h3>
+                                <strong style="font-weight: bold"></strong><br>
+                            <h5 class="nab" style="font-size: 20px;"> #1103, 11th Floor, Mittal Towers, <br> MG Road Bangalore, Karnataka</h5>
+                            <h5 style="font-size: 14px;"><b><i class="fa fa-mobile" style="font-size: 25px;" aria-hidden="true"></i> <a href="tel:+91 78997 77009">+91 78997 77009</a>  /<a href="tel:+91 96862 61676"> +91 96862 61676</a></b>
+                                <br></h5>
+                            <h5 style="font-size: 18px;"><i class="fa fa-envelope" style="font-size: 20px;" aria-hidden="true"></i><a href="mailto:sales@lycka-group.com" target="_top">  sales@lycka-group.com</a>
+                                <br><h5 style="font-size: 18px;"><a href="http://lycka-group.com/"><i class="fa fa-chrome"  style="font-size: 20px;"  aria-hidden="true"> www.lycka-group.com</i></a></h5>
+                            </h5>
+
                             <div id="map" style="width:400px;height:400px;background:yellow"></div>
                         </div>
                     </div>
