--- a/client/index.html
+++ b/client/index.html
@@ -480,6 +480,11 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
+        var video = document.getElementById('video');
+        video.addEventListener('click', function() {
+            video.play();
+        }, false);
+
         function myMap() {
             var uluru = {
                 lat: 12.9741,
