--- a/client/index.html
+++ b/client/index.html
@@ -105,7 +105,7 @@
     <header id="video-area" data-stellar-background-ratio="0.5">
 
         <div id="block" data-vide-options="loop: true">
-            <video style="width: 100%;height: 100%;" playsinline autoplay loop>
+            <video id="video" style="width: 100%;height: 100%;" playsinline autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4">
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
