--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
 
     <header id="video-area" data-stellar-background-ratio="0.5">
 
-        <div id="block" data-vide-options="loop: true">
+        <div id="block">
             <video id="video" style="width: 100%;height: 100%;" playsinline autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4">
                   <source src="movie.ogg" type="video/ogg">
@@ -458,12 +458,7 @@
         <i class="lnr lnr-arrow-up"></i>
     </a>
 
-    <div id="loader">
-        <div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-        </div>
-    </div>
+   
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
