--- a/client/index.html
+++ b/client/index.html
@@ -124,7 +124,7 @@
         <div class="fixed-top">
             <div class="container">
                 <div class="logo-menu">
-                    <a href="index-2.html" class="logo"><img src="img/lycka.png" / height="50px" width=""></a>
+                    <img  class="logo" src="img/lycka.png"  height="50px" width="">
                     <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>
                 </div>
             </div>
