--- a/client/index.html
+++ b/client/index.html
@@ -408,14 +408,14 @@
                             <div class="section-header">
                             </div>
 
-                            <h3 style="font-size: 20px;color: #333;" class="section-title wow fadeIn" data-wow-duration="1000ms" data-wow-delay="0.3s">LYCKA INDIA TRADING PRIVATE LIMITED </h3>
+                           <p style="font-size: 25px;"  data-wow-duration="1000ms" data-wow-delay="0.3s">LYCKA INDIA TRADING PRIVATE LIMITED </p>
                             <strong style="font-weight: bold"></strong><br>
-                            <h5 class="nab" style="font-size: 22px;color: #333;"> #1103, 11th Floor, Mittal Towers, <br> MG Road Bangalore, Karnataka</h5>
-                            <h5 style="font-size: 22px;color: #333"><b><i class="fa fa-mobile" style="font-size: 25px;" aria-hidden="true"></i> <a href="tel:+91 78997 77009">+91 78997 77009</a>  /<a href="tel:+91 96862 61676"> +91 96862 61676</a></b>
-                                <br></h5>
-                            <h5 style="font-size: 20px;color: #333"><i class="fa fa-envelope" style="font-size: 20px;" aria-hidden="true"></i><a href="mailto:sales@lycka-group.com" target="_top">  sales@lycka-group.com</a>
+                            <p  data-wow-duration="1000ms" data-wow-delay="0.3s"> #1103, 11th Floor, Mittal Towers, <br> MG Road Bangalore, Karnataka</p>
+                          <p  data-wow-duration="1000ms" data-wow-delay="0.3s"><b><i class="fa fa-mobile" style="font-size: 25px;" aria-hidden="true"></i> <a href="tel:+91 78997 77009">+91 78997 77009</a>  /<a href="tel:+91 96862 61676"> +91 96862 61676</a></b>
+                                <br></p>
+                            <p  data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="fa fa-envelope" style="font-size: 20px;" aria-hidden="true"></i><a href="mailto:sales@lycka-group.com" target="_top">  sales@lycka-group.com</a>
 
-                            </h5>
+                            </p>
 
                             <div id="map" style="width:400px;height:400px;background:yellow"></div>
                         </div>
