--- a/client/index.html
+++ b/client/index.html
@@ -116,7 +116,7 @@
 
         <div id="block">
             <video id="video" style="width: 100%;height: 100%;" playsinline autoplay loop>
-                  <source src="video/levisys.mp4" type="video/mp4">
+                  <source src="video/levisys.mp4" type="video/mp4" onclick="this.play();">
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
                 </video>
