--- a/client/index.html
+++ b/client/index.html
@@ -124,7 +124,7 @@
         <div class="fixed-top">
             <div class="container">
                 <div class="logo-menu">
-                    <img  class="logo" src="img/lycka.png"  height="50px" width="">
+                    <img class="logo" src="img/lycka.png" height="50px" width="">
                     <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>
                 </div>
             </div>
@@ -408,12 +408,12 @@
                             <div class="section-header">
                             </div>
 
-                           <p style="font-size: 25px;"  data-wow-duration="1000ms" data-wow-delay="0.3s">LYCKA INDIA TRADING PRIVATE LIMITED </p>
+                            <p style="font-size: 25px;" data-wow-duration="1000ms" data-wow-delay="0.3s">LYCKA INDIA TRADING PRIVATE LIMITED </p>
                             <strong style="font-weight: bold"></strong><br>
-                            <p  data-wow-duration="1000ms" data-wow-delay="0.3s"> #1103, 11th Floor, Mittal Towers, <br> MG Road Bangalore, Karnataka</p>
-                          <p  data-wow-duration="1000ms" data-wow-delay="0.3s"><b><i class="fa fa-mobile" style="font-size: 25px;" aria-hidden="true"></i> <a href="tel:+91 78997 77009">+91 78997 77009</a>  /<a href="tel:+91 96862 61676"> +91 96862 61676</a></b>
+                            <p data-wow-duration="1000ms" data-wow-delay="0.3s"> #1103, 11th Floor, Mittal Towers, <br> MG Road Bangalore, Karnataka</p>
+                            <p data-wow-duration="1000ms" data-wow-delay="0.3s"><b><i class="fa fa-mobile" style="font-size: 25px;" aria-hidden="true"></i> <a href="tel:+91 78997 77009">+91 78997 77009</a>  /<a href="tel:+91 96862 61676"> +91 96862 61676</a></b>
                                 <br></p>
-                            <p  data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="fa fa-envelope" style="font-size: 20px;" aria-hidden="true"></i><a href="mailto:sales@lycka-group.com" target="_top">  sales@lycka-group.com</a>
+                            <p data-wow-duration="1000ms" data-wow-delay="0.3s"><i class="fa fa-envelope" style="font-size: 20px;" aria-hidden="true"></i><a href="mailto:sales@lycka-group.com" target="_top">  sales@lycka-group.com</a>
 
                             </p>
 
@@ -458,7 +458,7 @@
         <i class="lnr lnr-arrow-up"></i>
     </a>
 
-   
+
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="js/jquery-min.js"></script>
@@ -485,7 +485,26 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
+        var ONLYONETIME_EXECUTE = null;
+        window.addEventListener('load', function() { // on page load
 
+            document.body.addEventListener('touchstart', function(e) {
+
+                if (ONLYONETIME_EXECUTE == null) {
+
+                    video.play();
+
+                    //if you want to prepare more than one video/audios use this trick :             
+                    video2.play();
+                    video2.pause();
+                    // now video2 is buffering and you can play it programmability later 
+
+                    ONLYONETIME_EXECUTE = 0;
+                }
+
+            }, false)
+
+        }, false)
 
         function myMap() {
             var uluru = {
