--- a/client/index.html
+++ b/client/index.html
@@ -112,7 +112,7 @@
     <header id="video-area" data-stellar-background-ratio="0.5">
 
         <div id="block">
-            <video id="block" style="width: 100%;height: 100%;" playsinline autoplay loop>
+            <video id="video" style="width: 100%;height: 100%;" playsinline autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4" onclick="this.play();">
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
@@ -455,6 +455,12 @@
         <i class="lnr lnr-arrow-up"></i>
     </a>
 
+    <div id="loader">		   
+         <div class="spinner">		
+            <div class="double-bounce1"></div>		
+             <div class="double-bounce2"></div>		
+         </div>		
+    </div>
 
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
