--- a/client/index.html
+++ b/client/index.html
@@ -110,9 +110,17 @@
 
 
     <header id="video-area" data-stellar-background-ratio="0.5">
+       
+      <div class="outer-container">
+    <div class="inner-container">
+        <div class="video-overlay">Bug Buck Bunny - Trailer</div>
+        <video id="player" controls
+        src="http://video.webmfiles.org/big-buck-bunny_trailer.webm" autoplay loop></video>
+    </div>
+</div>
 
-        <div id="block">
-            <video id="video" style="width: 100%;height: 100%;" playsinline autoplay loop>
+       <!-- <div id="block">
+            <video id="block" style="width: 100%;height: 100%;" playsinline autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4" onclick="this.play();">
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
@@ -127,7 +135,7 @@
             </div>
         </div>
         <div class="overlay overlay-2"></div>
-        <!--<div class="container">
+        <div class="container">
             <div class="row justify-content-md-center">
                 <div class="col-md-10">
                     <div class="contents text-center">
