--- a/client/index.html
+++ b/client/index.html
@@ -114,7 +114,7 @@
       <div class="outer-container">
     <div class="inner-container">
         <div class="video-overlay">Bug Buck Bunny - Trailer</div>
-        <video id="player" controls
+        <video id="player" 
         src="http://video.webmfiles.org/big-buck-bunny_trailer.webm" autoplay loop></video>
     </div>
 </div>
