--- a/client/index.html
+++ b/client/index.html
@@ -26,12 +26,6 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
 
-    <script>
-        $(document).ready(function() {
-
-        });
-
-    </script>
 
 
 </head>
@@ -122,7 +116,7 @@
 
 
         <header id="video-area" data-stellar-background-ratio="0.5">
-            <div id="block" data-vide-bg="video/levisys" data-vide-options="loop: true" onclick="this.play();"></div>
+            <div id="block" data-vide-bg="video/levisys" data-vide-options="loop: true,muted: false" onclick="this.play();"></div>
             <div class="fixed-top">
                 <div class="container">
                     <div class="logo-menu">
