--- a/client/index.html
+++ b/client/index.html
@@ -116,7 +116,7 @@
 
 
         <header id="video-area" data-stellar-background-ratio="0.5">
-            <div id="block" data-vide-bg="video/levisys" data-vide-options="loop: true,muted: false" onclick="this.play();"></div>
+            <div id="block" data-vide-bg="mp4: video/levisys.mp4, webm: video/levisys.webm, ogv: video/levisys.ogv, poster: img/lycka.png" data-vide-options="loop: true,muted: false" onclick="this.play();"></div>
             <div class="fixed-top">
                 <div class="container">
                     <div class="logo-menu">
