--- a/client/index.html
+++ b/client/index.html
@@ -529,8 +529,8 @@
             video.play();
         }, false);
 */
-   
-    document.getElementById('block').play();
+   $('#block').get(0).play();
+
 
 //        var ONLYONETIME_EXECUTE = null;
 //        window.addEventListener('load', function() { // on page load
