--- a/client/index.html
+++ b/client/index.html
@@ -524,13 +524,13 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
-       /* var video = document.getElementById('block');
+        var video = document.getElementById('block');
         video.addEventListener('click', function() {
             video.play();
         }, false);
-*/
-   $('#block').get(0).play();
 
+  /* $('#block').get(0).play();
+*/
 
 //        var ONLYONETIME_EXECUTE = null;
 //        window.addEventListener('load', function() { // on page load
