--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,7 @@
             <div class="fixed-top">
                 <div class="container">
                     <div class="logo-menu">
-                       <img src="img/lycka.png"  height="50px" width=""/>
+                        <img src="img/lycka.png" height="50px" width="" />
                         <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>
                     </div>
                 </div>
@@ -524,34 +524,37 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
-        var video = document.getElementById('block');
-        video.addEventListener('click', function() {
-            video.play();
-        }, false);
+        $(document).ready(function() {
+            var video = document.getElementById('block');
+            video.addEventListener('click', function() {
+                video.play();
+            }, false);
+        });
 
-  /* $('#block').get(0).play();
-*/
 
-//        var ONLYONETIME_EXECUTE = null;
-//        window.addEventListener('load', function() { // on page load
-//
-//            document.body.addEventListener('touchstart', function(e) {
-//
-//                if (ONLYONETIME_EXECUTE == null) {
-//
-//                    video.play();
-//
-//                    //if you want to prepare more than one video/audios use this trick :             
-//                    video2.play();
-//                    video2.pause();
-//                    // now video2 is buffering and you can play it programmability later 
-//
-//                    ONLYONETIME_EXECUTE = 0;
-//                }
-//
-//            }, false)
-//
-//        }, false)
+        /* $('#block').get(0).play();
+         */
+
+        //        var ONLYONETIME_EXECUTE = null;
+        //        window.addEventListener('load', function() { // on page load
+        //
+        //            document.body.addEventListener('touchstart', function(e) {
+        //
+        //                if (ONLYONETIME_EXECUTE == null) {
+        //
+        //                    video.play();
+        //
+        //                    //if you want to prepare more than one video/audios use this trick :             
+        //                    video2.play();
+        //                    video2.pause();
+        //                    // now video2 is buffering and you can play it programmability later 
+        //
+        //                    ONLYONETIME_EXECUTE = 0;
+        //                }
+        //
+        //            }, false)
+        //
+        //        }, false)
 
         function myMap() {
             var uluru = {
