--- a/client/index.html
+++ b/client/index.html
@@ -115,7 +115,7 @@
 
 
 
-        <header id="video-area" data-stellar-background-ratio="0.5">
+       <!-- <header id="video-area" data-stellar-background-ratio="0.5">
             <div id="block" data-vide-bg="mp4: video/levisys.mp4, webm: video/levisys.webm, ogv: video/levisys.ogv, poster: img/lycka.png" data-vide-options="loop: true,muted: false" onclick="this.play();"></div>
             <div class="fixed-top">
                 <div class="container">
@@ -132,19 +132,19 @@
                         <div class="contents text-center">
                             <h1 class="wow fadeInDown myown" data-wow-duration="1000ms" data-wow-delay="0.3s">Invest in Innovation<br> Connect and Collaborate<br> Conquer New Frontiers<br> Build the Future
                             </h1>
-                            <!--<div><br/>
+                            <div><br/>
               <br/>
               <br/><br/>
               <br/>
               <br/><br/>
               <br/>
-              <br/></div>-->
+              <br/></div>
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
-        <!-- <div id="block">
+        </header>-->
+         <div id="block">
 
             <video id="block" class="center" style="width: 100%;height: 100%;" playsinline autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4" onclick="this.play();">
@@ -172,7 +172,7 @@
                 </div>
             </div>
         </div>
--->
+
     </header>
     <!-- Header Section End -->
 
