--- a/client/index.html
+++ b/client/index.html
@@ -146,7 +146,7 @@
         </header>-->
          <div id="block">
 
-            <video id="block" class="center" style="width: 100%;height: 100%;" playsinline autoplay loop>
+            <video id="video" class="center" style="width: 100%;height: 100%;" playsinline autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4" onclick="this.play();">
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
@@ -525,7 +525,7 @@
         // When the user clicks the marker, an info window opens.
 
         
-            var video = document.getElementById('block');
+            var video = document.getElementById('video');
             video.addEventListener('click', function() {
                 video.play();
             }, false);
