--- a/client/index.html
+++ b/client/index.html
@@ -147,7 +147,7 @@
          <div id="block">
 
             <video id="video" class="center" style="width: 100%;height: 100%;" playsinline autoplay loop>
-                  <source src="video/levisys.mp4" type="video/mp4" onclick="this.play();">
+                  <source src="video/levisys.mp4" type="video/mp4" >
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
                     <div class="overlay overlay-2"></div>
