--- a/client/index.html
+++ b/client/index.html
@@ -146,7 +146,7 @@
         </header>-->
          <div id="block">
 
-            <video id="video" class="center" style="width: 100%;height: 100%;" playsinline autoplay loop>
+            <video id="video" class="center" style="width: 100%;height: 100%;"  autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4" >
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
