--- a/client/index.html
+++ b/client/index.html
@@ -115,7 +115,7 @@
 
 
 
-       <!-- <header id="video-area" data-stellar-background-ratio="0.5">
+        <!-- <header id="video-area" data-stellar-background-ratio="0.5">
             <div id="block" data-vide-bg="mp4: video/levisys.mp4, webm: video/levisys.webm, ogv: video/levisys.ogv, poster: img/lycka.png" data-vide-options="loop: true,muted: false" onclick="this.play();"></div>
             <div class="fixed-top">
                 <div class="container">
@@ -144,9 +144,9 @@
                 </div>
             </div>
         </header>-->
-         <div id="block">
+        <div id="block">
 
-            <video id="video" class="center" style="width: 100%;height: 100%;"  autoplay loop>
+            <video id="video" class="center" style="width: 100%;height: 100%;" autoplay loop>
                   <source src="video/levisys.mp4" type="video/mp4" >
                   <source src="movie.ogg" type="video/ogg">
                   Your browser does not support the video tag.
@@ -524,11 +524,13 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
-        
-            var video = document.getElementById('video');
-            video.addEventListener('click', function() {
-                video.play();
-            }, false);
+        $(document).ready(function() {
+           alert("hi")
+        });
+        var video = document.getElementById('video');
+        video.addEventListener('click', function() {
+            video.play();
+        }, false);
 
 
         /* $('#block').get(0).play();
