--- a/client/index.html
+++ b/client/index.html
@@ -524,8 +524,8 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
-        $(document).ready(function() {
-           alert("hi")
+        $().ready(function() {
+           alert("hi");
         });
         var video = document.getElementById('video');
         video.addEventListener('click', function() {
