--- a/client/index.html
+++ b/client/index.html
@@ -524,9 +524,9 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
-        $('#video').load(function() {
-            console.log('iframe loaded');
-        });
+        $(document).load(function () {
+            alert("hi")
+});
         var video = document.getElementById('video');
         video.addEventListener('click', function() {
             video.play();
