--- a/client/index.html
+++ b/client/index.html
@@ -524,11 +524,12 @@
         // This example displays a marker at the center of Australia.
         // When the user clicks the marker, an info window opens.
 
-        $(document).load(function () {
+        $(document).load(function() {
             alert("hi")
-});
+            console.log("hi");
+        });
         var video = document.getElementById('video');
-        video.addEventListener('click', function() {
+        video.addEventListener(function() {
             video.play();
         }, false);
 
