--- a/client/index.html
+++ b/client/index.html
@@ -525,6 +525,10 @@
         // When the user clicks the marker, an info window opens.
         document.addEventListener("DOMContentLoaded", function(event) {
             console.log("DOM fully loaded and parsed");
+            var video = document.getElementById('video');
+            video.addEventListener('click', function() {
+                video.play();
+            }, false);
         });
         var video = document.getElementById('video');
         video.addEventListener('click', function() {
