--- a/client/index.html
+++ b/client/index.html
@@ -531,9 +531,9 @@
             }, false);
         });
         var video = document.getElementById('video');
-        video.addEventListener('click', function() {
+//        video.addEventListener('click', function() {
             video.play();
-        }, false);
+//        }, false);
 
 
         /* $('#block').get(0).play();
