--- a/client/index.html
+++ b/client/index.html
@@ -167,7 +167,7 @@
         <div class="fixed-top">
             <div class="container">
                 <div class="logo-menu">
-                    <img class="logo" src="img/lycka.png" height="50px" width="">
+                    <img class="logo" src="img/lycka.png" height="65px" width="">
                     <button class="menu-button" id="open-button"><i class="lnr lnr-menu"></i></button>
                 </div>
             </div>
@@ -409,7 +409,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+                                        <input type="email" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
                                         <div class="help-block with-errors"></div>
                                     </div>
                                 </div>
@@ -425,7 +425,7 @@
                                         <div class="help-block with-errors"></div>
                                     </div>
                                     <div class="submit-button text-center">
-                                        <button class="btn btn-common" id="submit" type="submit">Send Message</button>
+                                        <button class="btn btn-common mybut" id="submit" type="submit" >Send Message</button>
                                         <div id="msgSubmit" class="h3 text-center hidden"></div>
                                         <div class="clearfix"></div>
                                     </div>
@@ -468,6 +468,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="social-icons wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="0.3s">
+                       <p style="color: #fff;font-size: 22px;"> 2017 &copy; Lycka-group<p>
                         <ul>
                             <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
