--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,8 @@
 
     <meta name="author" content="Grayrids">
     <title>Lycka Group</title>
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="icon" href="img/lycka.png">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
