--- a/client/index.html
+++ b/client/index.html
@@ -425,7 +425,7 @@
                                     </div>
                                     <div class="submit-button text-center">
                                         <button class="btn btn-common mybut" id="submit" type="submit" >Send Message</button>
-                                        <div id="msgSubmit" class="h3 text-center hidden"></div>
+                                        <div id="msgSubmit" style="color:#D0AF51 !important;font-family: Audiowide" class="h3 text-center hidden"></div>
                                         <div class="clearfix"></div>
                                     </div>
                                 </div>
